left column content

--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="container">
-            <div class="page-left">Left Column</div>
+            <div class="page-left">
+                <div class="main-info">
+                    <p class="headline">Answers to all of your questions.</p>
+                    <p>Find helpful resources and answers to common questions.</p>
+                    <p>Don’t see what you are looking for? Submit your request below.</p>
+                    <a href="#" class="btn">Submit Request</a>
+                </div>
+
+                <div class="quick-links">
+                    <a href="#">MediaWorks & Creative Services Request Form</a>
+                    <a href="#">Getty Request Form</a>
+                    <a href="#">MediaWorks One Pager</a>
+                    <a href="#">MediaWorks Insights Report</a>
+                    <a href="#">Creative Services</a>
+                </div>
+            </div>
             <div class="page-right">Right Column</div>
         </div>
     </body>
