--- a/index.html
+++ b/index.html
@@ -14,28 +14,35 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body class="no-bs">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="container">
-            <div class="page-left">
+        <div class="container-fluid page-container">
+            <div class="page-left col-lg-4">
                 <div class="main-info">
                     <p class="headline">Answers to all of your questions.</p>
-                    <p>Find helpful resources and answers to common questions.</p>
-                    <p>Don’t see what you are looking for? Submit your request below.</p>
+                    <p class="featured">Find helpful resources and answers to common questions.</p>
+                    <p class="featured">Don’t see what you are looking for? Submit your request below.</p>
                     <a href="#" class="btn">Submit Request</a>
                 </div>
 
                 <div class="quick-links">
-                    <a href="#">MediaWorks & Creative Services Request Form</a>
-                    <a href="#">Getty Request Form</a>
-                    <a href="#">MediaWorks One Pager</a>
-                    <a href="#">MediaWorks Insights Report</a>
-                    <a href="#">Creative Services</a>
+                    <p class="subheadline">Quick Links and Resources</p>
+                    <ul>
+                        <li><a href="#" class="featured">MediaWorks & Creative Services Request Form</a></li>
+                        <li><a href="#" class="featured">Getty Request Form</a></li>
+                        <li><a href="#" class="featured">MediaWorks One Pager</a></li>
+                        <li><a href="#" class="featured">MediaWorks Insights Report</a></li>
+                        <li><a href="#" class="featured">Creative Services</a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="page-right">Right Column</div>
+            <div class="page-right col-lg-8">
+                <div class="section">
+                    <p class="subheadline">MediaWorks Overview & Services</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
