QA tasks round 2

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
                     <p class="headline">Answers to all of your questions.</p>
                     <p class="featured">Find helpful resources and answers to common questions.</p>
                     <p class="featured">Don’t see what you are looking for? Submit your request below.</p>
-                    <a href="https://hcamediaworks.zendesk.com/hc/en-us/requests/new" class="btn">Submit Request</a>
+                    <a href="https://hcamediaworks.zendesk.com/hc/en-us/requests/new" target="_blank" class="btn">Submit Request</a>
                 </div>
 
                 <div class="quick-links">
                     <p class="subheadline">Quick Links and Resources</p>
                     <ul>
-                        <li><a href="https://hcamediaworks.saepio.com/marketport/marketinghub.xhtml#openCategory_461" class="featured">MediaWorks & Creative Services Request Form</a></li>
-                        <li><a href="#" class="featured">Getty Request Form</a></li>
-                        <li><a href="#" class="featured">MediaWorks One Pager</a></li>
-                        <li><a href="#" class="featured">MediaWorks Insights Report</a></li>
-                        <li><a href="#" class="featured">Creative Services</a></li>
+                        <li><a href="https://hcamediaworks.saepio.com/marketport/marketinghub.xhtml#openCategory_1571" target="_blank" class="featured">News & Updates</a></li>
+                        <li><a href="https://hcamediaworks.saepio.com/marketport/marketinghub.xhtml#openCategory_464" target="_blank" class="featured">Guides & Tutorials</a></li>
+                        <li><a href="#" class="featured">Admin Support</a></li>
+                        <li><a href="https://hcamediaworks.saepio.com/marketport/marketinghub.xhtml#openCategory_1557" target="_blank" class="featured">HCA Healthcare Brand</a></li>
+                        <li><a href="https://hcamediaworks.saepio.com/marketport/marketinghub.xhtml#openRoot_29" target="_blank" class="featured">Image Repository</a></li>
                     </ul>
                 </div>
             </div>
@@ -93,9 +93,10 @@
                             <div id="collapse14" class="collapse" aria-labelledby="heading14" data-parent="#accordion1">
                                 <div class="card-body">
                                     <p>Try one of these options from the top navigation bar: the search field or Category menu.</p>
-                                    <p><strong>Search.</strong> Advanced search can help you narrow your results, especially if you have an idea of date range, division, service line, etc. that you would like to search. To access advanced search options, click the arrow in the search field and click</p>
-                                    <p><strong>Advanced Search.</strong>Categories. You can explore assets and images by topic using the Category drop-down menu. The specific Image Repository option is very handy.</p>
-                                    <p>Or, click the links in the Categories listed on the MediaWorks home page to explore available assets. If you are unable to find something, contact us on our Customer Service request form and choose "What can we help you find?".</p>
+                                    <p><strong>Search.</strong> If you can’t find what you are looking for on MediaWorks, try using the search bar in the top navigation bar. Use the toggles to the right of the search bar to choose between searching the entire site or within your current category.</p>
+                                    <p><strong>Advanced Search.</strong>Use advanced search to narrow your search results. This is helpful if you have an idea of date range, division, service line, etc. that you would like to search. To access advanced search options, click the arrow in the search field and click “Advanced Search.”</p>
+                                    <p><strong>Category Menu</strong> You can explore assets and images by topic using the Category drop-down menu</p>
+                                    <p>Or, click the links in the Categories listed on the MediaWorks home page to explore available assets. If you are unable to find something, contact MediaWorks Support.</p>
                                 </div>
                             </div>
                         </div>
@@ -108,8 +109,9 @@
                             </div>
                             <div id="collapse15" class="collapse" aria-labelledby="heading15" data-parent="#accordion1">
                                 <div class="card-body">
-                                    <p>Yes, you are welcome to use MediaWorks to manage your assets. Depending on the number of assets you plan to manage, it may be best for you to become a system administrator. Contact us so we can discuss your needs, share best practices and provide required training so you can take advantage of all the tool has to offer.</p>
-                                    <p>Read more about the benefits of using MediaWorks to manage your assets.</p>
+                                    <p><a href="https://hcamp.saepio.com/marketport/assets/2/405067" target="_blank">Click here</a> to download the MediaWorks User Manual. A video version of this manual, along with a variety of guides and tutorials can be found on the <a href="https://hcamediaworks.saepio.com/marketport/marketinghub.xhtml#openCategory_464" target="_blank">MediaWorks Guides & Tutorials page</a>.</p>
+                                    <p>MediaWorks Admins can find training documents and other resources on our <a href="https://hcamediaworks.saepio.com/marketport/marketinghub.xhtml#openCategory_1568" target="_blank">MediaWorks Admin Support Page</a>.</p>
+                                    <p>Please contact <a href="https://hcamediaworks.zendesk.com/hc/en-us/requests/new" target="_blank">MediaWorks Support</a> about any additional training.</p>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +194,8 @@
                         
                             <div id="collapse31" class="collapse" aria-labelledby="heading31" data-parent="#accordion3">
                                 <div class="card-body">
-                                    One benefit of using MediaWorks is that assets can be customized and ordered in just a few clicks. We partner with multiple print centers across the country who have gone through a rigorous process to help ensure quality, cost efficiency and customer satisfaction. Learn more about our print centers. {Link to print center page?}
+                                    <p>One benefit of using MediaWorks is that assets can be customized and ordered in just a few clicks. We partner with multiple print centers across the country who have gone through a rigorous process to help ensure quality, cost efficiency and customer satisfaction.</p>
+                                    <a href="https://hcamediaworks.saepio.com/marketport/marketinghub.xhtml#openCategory_1621" target="_blank">Learn more about our print centers.</a>
                                 </div>
                             </div>
                         </div>
@@ -204,19 +207,20 @@
                             </div>
                             <div id="collapse32" class="collapse" aria-labelledby="heading32" data-parent="#accordion3">
                                 <div class="card-body">
-                                    Turn around time for orders are typically 5-7 business days or less. For large quantities or slightly complex products, it could take about 10 business days. For additional questions about your order, please contact your print center directly
+                                    Turn around time for orders are typically 5-7 business days or less. For large quantities or slightly complex products, it could take about 10 business days.
                                 </div>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-header" id="heading33">
                                 <p data-toggle="collapse" data-target="#collapse33" aria-expanded="true" aria-controls="collapse33">
-                                    How do I update, expedite, or cancel my order. <i class="fas fa-angle-down"></i>
+                                    How do I check on my order status or change my order? <i class="fas fa-angle-down"></i>
                                 </p>
                             </div>
                             <div id="collapse33" class="collapse" aria-labelledby="heading33" data-parent="#accordion3">
                                 <div class="card-body">
-                                    The MediaWorks team cannot make any changes to your order after it has been placed. To update any order information, please contact the print vendor directly as soon as possible. Be sure to include your MediaWorks order number.
+                                    <p>The MediaWorks team cannot make any changes to your order after it has been placed. If you have a question about your order or need to update order details, please contact the print vendor directly as soon as possible. Be sure to include your MediaWorks order number.</p>
+                                    <a href="https://hcamediaworks.saepio.com/marketport/marketinghub.xhtml#openCategory_1621" target="_blank">Find more information about MediaWorks vendors here.</a>
                                 </div>
                             </div>
                         </div>
